--- a/src/assets/sass/lbd/_variables.scss
+++ b/src/assets/sass/lbd/_variables.scss
@@ -7,6 +7,7 @@ $border-thin:                1px !default;
 $border-thick:               2px !default;
 
 $white-color:                #FFFFFF !default;
+$capstone-yellow:            #F2F1AD !default;
 $white-bg:                   #FFFFFF !default;
 
 $smoke-bg:                   #F5F5F5 !default;
@@ -128,7 +129,7 @@ $line-height-general:          1.5 !default;
 $line-height:                 20px !default;
 $line-height-lg:              54px !default;
 
-$sidebar-width:               calc(100% - 260px) !default;
+$sidebar-width:               calc(100% - 210px) !default;
 
 
 $border-radius-top:        10px 10px 0 0 !default;
