--- a/src/assets/sass/lbd/mixins/_buttons.scss
+++ b/src/assets/sass/lbd/mixins/_buttons.scss
@@ -8,9 +8,9 @@
   &:active,
   &.active,
   .open > &.dropdown-toggle {
-    background-color: $transparent-bg;
-    color: $btn-states-color;
-    border-color: $btn-states-color;
+    background-color: $btn-color;
+    color: white;
+    border-color: $btn-color;
   }
   
   &.disabled,
