--- a/src/assets/sass/lbd/_sidebar-and-main-panel.scss
+++ b/src/assets/sass/lbd/_sidebar-and-main-panel.scss
@@ -243,11 +243,13 @@ body > .navbar-collapse{
 
     > .content{
         padding: 30px 15px;
-        min-height: calc(100% - 123px);
+        min-height: calc(100vh - 123px);
+        // margin-bottom: 30px;
     }
 
     > .footer{
         border-top: 1px solid #e7e7e7;
+        // height: 50px;
     }
 
     .navbar{
