--- a/src/components/CustomTable/CustomeTable.css
+++ b/src/components/CustomTable/CustomeTable.css
@@ -83,3 +83,8 @@
   text-align: left;
   width: max-content;
 }
+.perfectCenter{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
