Thêm chức năng phân chia giao diện theo role, hiển thị material table, popup input, dashboard bằng google data studio

--- a/src/assets/sass/lbd/_variables.scss
+++ b/src/assets/sass/lbd/_variables.scss
@@ -18,6 +18,7 @@ $black-color: #333333 !default;
 $black-hr: #444444 !default;
 
 $light-gray: #e3e3e3 !default;
+$light-grey: lightgrey !default;
 $medium-gray: #dddddd !default;
 $medium-dark-gray: #aaaaaa !default;
 $dark-gray: #9a9a9a !default;
